CRY-27 | finding coin was the most volatilitiness

--- a/src/up_down_trend.ipynb
+++ b/src/up_down_trend.ipynb
@@ -2,22 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from pandas import DataFrame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "symbols = pandas.read_csv('symbols.csv').drop(['Unnamed: 0'], axis=1)\n",
-    "token = pandas.read_csv('token_price.csv')"
+    "token = pandas.read_csv('token_price.csv')\n",
+    "data_symbol = pandas.read_csv('data.csv').drop(['Unnamed: 0'], axis=1)"
    ]
   },
   {
@@ -678,6 +680,374 @@
    "source": [
     "=> Với chu kỳ get data 30p, thì thời gian tăng sẽ theo chu kỳ trung bình 50p 1 lần còn thời gian giảm sẽ theo chu kỳ trung bình 70p 1 lần. Có sự chênh lệch khá lớn giữa thời gian tăng và thời gian giảm"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Which coin was the most volatilitiness ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Symbol</th>\n",
+       "      <th>base</th>\n",
+       "      <th>quote</th>\n",
+       "      <th>Kline open time</th>\n",
+       "      <th>Open price</th>\n",
+       "      <th>High price</th>\n",
+       "      <th>Low price</th>\n",
+       "      <th>Close price</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Kline Close time</th>\n",
+       "      <th>Quote asset volume</th>\n",
+       "      <th>Number of trades</th>\n",
+       "      <th>Taker buy base asset volume</th>\n",
+       "      <th>Taker buy quote asset volume</th>\n",
+       "      <th>Unused field, ignore</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ETHBTC</td>\n",
+       "      <td>ETH</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>1669395600000</td>\n",
+       "      <td>0.072026</td>\n",
+       "      <td>0.072222</td>\n",
+       "      <td>0.072026</td>\n",
+       "      <td>0.072222</td>\n",
+       "      <td>1342.1624</td>\n",
+       "      <td>1669397399999</td>\n",
+       "      <td>96.776126</td>\n",
+       "      <td>2657</td>\n",
+       "      <td>794.6663</td>\n",
+       "      <td>57.298344</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ETHBTC</td>\n",
+       "      <td>ETH</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>1669397400000</td>\n",
+       "      <td>0.072222</td>\n",
+       "      <td>0.072335</td>\n",
+       "      <td>0.072117</td>\n",
+       "      <td>0.072162</td>\n",
+       "      <td>1185.9640</td>\n",
+       "      <td>1669399199999</td>\n",
+       "      <td>85.640393</td>\n",
+       "      <td>2727</td>\n",
+       "      <td>560.9044</td>\n",
+       "      <td>40.508977</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ETHBTC</td>\n",
+       "      <td>ETH</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>1669399200000</td>\n",
+       "      <td>0.072163</td>\n",
+       "      <td>0.072263</td>\n",
+       "      <td>0.072101</td>\n",
+       "      <td>0.072189</td>\n",
+       "      <td>813.4793</td>\n",
+       "      <td>1669400999999</td>\n",
+       "      <td>58.717779</td>\n",
+       "      <td>1862</td>\n",
+       "      <td>359.8931</td>\n",
+       "      <td>25.975732</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ETHBTC</td>\n",
+       "      <td>ETH</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>1669401000000</td>\n",
+       "      <td>0.072188</td>\n",
+       "      <td>0.072261</td>\n",
+       "      <td>0.072161</td>\n",
+       "      <td>0.072212</td>\n",
+       "      <td>936.2168</td>\n",
+       "      <td>1669402799999</td>\n",
+       "      <td>67.599402</td>\n",
+       "      <td>1816</td>\n",
+       "      <td>470.6928</td>\n",
+       "      <td>33.988586</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ETHBTC</td>\n",
+       "      <td>ETH</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>1669402800000</td>\n",
+       "      <td>0.072223</td>\n",
+       "      <td>0.072479</td>\n",
+       "      <td>0.072197</td>\n",
+       "      <td>0.072375</td>\n",
+       "      <td>1115.5725</td>\n",
+       "      <td>1669404599999</td>\n",
+       "      <td>80.727099</td>\n",
+       "      <td>3088</td>\n",
+       "      <td>593.4310</td>\n",
+       "      <td>42.945939</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1229157</th>\n",
+       "      <td>BUSDRON</td>\n",
+       "      <td>BUSD</td>\n",
+       "      <td>RON</td>\n",
+       "      <td>1670943600000</td>\n",
+       "      <td>4.629000</td>\n",
+       "      <td>4.630000</td>\n",
+       "      <td>4.620000</td>\n",
+       "      <td>4.621000</td>\n",
+       "      <td>5984.0000</td>\n",
+       "      <td>1670945399999</td>\n",
+       "      <td>27672.337000</td>\n",
+       "      <td>108</td>\n",
+       "      <td>2086.0000</td>\n",
+       "      <td>9651.160000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1229158</th>\n",
+       "      <td>BUSDRON</td>\n",
+       "      <td>BUSD</td>\n",
+       "      <td>RON</td>\n",
+       "      <td>1670945400000</td>\n",
+       "      <td>4.620000</td>\n",
+       "      <td>4.631000</td>\n",
+       "      <td>4.620000</td>\n",
+       "      <td>4.630000</td>\n",
+       "      <td>3618.0000</td>\n",
+       "      <td>1670947199999</td>\n",
+       "      <td>16734.982000</td>\n",
+       "      <td>42</td>\n",
+       "      <td>1642.0000</td>\n",
+       "      <td>7593.482000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1229159</th>\n",
+       "      <td>BUSDRON</td>\n",
+       "      <td>BUSD</td>\n",
+       "      <td>RON</td>\n",
+       "      <td>1670947200000</td>\n",
+       "      <td>4.631000</td>\n",
+       "      <td>4.631000</td>\n",
+       "      <td>4.630000</td>\n",
+       "      <td>4.631000</td>\n",
+       "      <td>3254.0000</td>\n",
+       "      <td>1670948999999</td>\n",
+       "      <td>15069.018000</td>\n",
+       "      <td>33</td>\n",
+       "      <td>2998.0000</td>\n",
+       "      <td>13883.738000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1229160</th>\n",
+       "      <td>BUSDRON</td>\n",
+       "      <td>BUSD</td>\n",
+       "      <td>RON</td>\n",
+       "      <td>1670949000000</td>\n",
+       "      <td>4.630000</td>\n",
+       "      <td>4.631000</td>\n",
+       "      <td>4.630000</td>\n",
+       "      <td>4.631000</td>\n",
+       "      <td>14415.0000</td>\n",
+       "      <td>1670950799999</td>\n",
+       "      <td>66749.027000</td>\n",
+       "      <td>92</td>\n",
+       "      <td>7577.0000</td>\n",
+       "      <td>35089.087000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1229161</th>\n",
+       "      <td>BUSDRON</td>\n",
+       "      <td>BUSD</td>\n",
+       "      <td>RON</td>\n",
+       "      <td>1670950800000</td>\n",
+       "      <td>4.631000</td>\n",
+       "      <td>4.631000</td>\n",
+       "      <td>4.630000</td>\n",
+       "      <td>4.631000</td>\n",
+       "      <td>3875.0000</td>\n",
+       "      <td>1670952599999</td>\n",
+       "      <td>17943.045000</td>\n",
+       "      <td>52</td>\n",
+       "      <td>1795.0000</td>\n",
+       "      <td>8312.645000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1229162 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Symbol  base quote  Kline open time  Open price  High price  \\\n",
+       "0         ETHBTC   ETH   BTC    1669395600000    0.072026    0.072222   \n",
+       "1         ETHBTC   ETH   BTC    1669397400000    0.072222    0.072335   \n",
+       "2         ETHBTC   ETH   BTC    1669399200000    0.072163    0.072263   \n",
+       "3         ETHBTC   ETH   BTC    1669401000000    0.072188    0.072261   \n",
+       "4         ETHBTC   ETH   BTC    1669402800000    0.072223    0.072479   \n",
+       "...          ...   ...   ...              ...         ...         ...   \n",
+       "1229157  BUSDRON  BUSD   RON    1670943600000    4.629000    4.630000   \n",
+       "1229158  BUSDRON  BUSD   RON    1670945400000    4.620000    4.631000   \n",
+       "1229159  BUSDRON  BUSD   RON    1670947200000    4.631000    4.631000   \n",
+       "1229160  BUSDRON  BUSD   RON    1670949000000    4.630000    4.631000   \n",
+       "1229161  BUSDRON  BUSD   RON    1670950800000    4.631000    4.631000   \n",
+       "\n",
+       "         Low price  Close price      Volume  Kline Close time  \\\n",
+       "0         0.072026     0.072222   1342.1624     1669397399999   \n",
+       "1         0.072117     0.072162   1185.9640     1669399199999   \n",
+       "2         0.072101     0.072189    813.4793     1669400999999   \n",
+       "3         0.072161     0.072212    936.2168     1669402799999   \n",
+       "4         0.072197     0.072375   1115.5725     1669404599999   \n",
+       "...            ...          ...         ...               ...   \n",
+       "1229157   4.620000     4.621000   5984.0000     1670945399999   \n",
+       "1229158   4.620000     4.630000   3618.0000     1670947199999   \n",
+       "1229159   4.630000     4.631000   3254.0000     1670948999999   \n",
+       "1229160   4.630000     4.631000  14415.0000     1670950799999   \n",
+       "1229161   4.630000     4.631000   3875.0000     1670952599999   \n",
+       "\n",
+       "         Quote asset volume  Number of trades  Taker buy base asset volume  \\\n",
+       "0                 96.776126              2657                     794.6663   \n",
+       "1                 85.640393              2727                     560.9044   \n",
+       "2                 58.717779              1862                     359.8931   \n",
+       "3                 67.599402              1816                     470.6928   \n",
+       "4                 80.727099              3088                     593.4310   \n",
+       "...                     ...               ...                          ...   \n",
+       "1229157        27672.337000               108                    2086.0000   \n",
+       "1229158        16734.982000                42                    1642.0000   \n",
+       "1229159        15069.018000                33                    2998.0000   \n",
+       "1229160        66749.027000                92                    7577.0000   \n",
+       "1229161        17943.045000                52                    1795.0000   \n",
+       "\n",
+       "         Taker buy quote asset volume  Unused field, ignore  \n",
+       "0                           57.298344                     0  \n",
+       "1                           40.508977                     0  \n",
+       "2                           25.975732                     0  \n",
+       "3                           33.988586                     0  \n",
+       "4                           42.945939                     0  \n",
+       "...                               ...                   ...  \n",
+       "1229157                   9651.160000                     0  \n",
+       "1229158                   7593.482000                     0  \n",
+       "1229159                  13883.738000                     0  \n",
+       "1229160                  35089.087000                     0  \n",
+       "1229161                   8312.645000                     0  \n",
+       "\n",
+       "[1229162 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_symbol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "minn = data_symbol.groupby('Symbol').min()[['High price','Low price']]\n",
+    "maxx = data_symbol.groupby('Symbol').max()[['High price','Low price']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "High price    BTCBIDR\n",
+      "Low price     BTCBIDR\n",
+      "dtype: object\n",
+      "High price    39405719.0\n",
+      "Low price     44534452.0\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((maxx - minn).idxmax(axis=0))\n",
+    "print((maxx - minn).max(axis=0))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "=> Đồng BTCBIDR có mức giao động lớn nhất"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
