--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -81,6 +81,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "symbols[(symbols.symbol == 'BTCUSDT')|(symbols.symbol == 'ETHUSDT')][['baseAsset','quoteAsset']].unstack().nunique()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -225,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +451,7 @@
        "[1229162 rows x 6 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +675,7 @@
        "(865, 12762)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -928,6 +948,377 @@
    "metadata": {},
    "source": [
     "Không khá hơn là bao"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>12752</th>\n",
+       "      <th>12753</th>\n",
+       "      <th>12754</th>\n",
+       "      <th>12755</th>\n",
+       "      <th>12756</th>\n",
+       "      <th>12757</th>\n",
+       "      <th>12758</th>\n",
+       "      <th>12759</th>\n",
+       "      <th>12760</th>\n",
+       "      <th>12761</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.996691</td>\n",
+       "      <td>0.999231</td>\n",
+       "      <td>0.999245</td>\n",
+       "      <td>0.025142</td>\n",
+       "      <td>0.033669</td>\n",
+       "      <td>0.053493</td>\n",
+       "      <td>0.019485</td>\n",
+       "      <td>0.024981</td>\n",
+       "      <td>0.982445</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.051783</td>\n",
+       "      <td>0.209434</td>\n",
+       "      <td>0.228170</td>\n",
+       "      <td>0.191421</td>\n",
+       "      <td>0.210489</td>\n",
+       "      <td>0.110507</td>\n",
+       "      <td>0.113719</td>\n",
+       "      <td>0.176674</td>\n",
+       "      <td>0.113460</td>\n",
+       "      <td>0.117021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.996691</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.995854</td>\n",
+       "      <td>0.996611</td>\n",
+       "      <td>0.100812</td>\n",
+       "      <td>0.109665</td>\n",
+       "      <td>0.124890</td>\n",
+       "      <td>0.096500</td>\n",
+       "      <td>0.102124</td>\n",
+       "      <td>0.979219</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.051051</td>\n",
+       "      <td>0.208526</td>\n",
+       "      <td>0.229178</td>\n",
+       "      <td>0.190382</td>\n",
+       "      <td>0.210022</td>\n",
+       "      <td>0.113681</td>\n",
+       "      <td>0.116942</td>\n",
+       "      <td>0.180913</td>\n",
+       "      <td>0.116959</td>\n",
+       "      <td>0.120576</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.999231</td>\n",
+       "      <td>0.995854</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.999444</td>\n",
+       "      <td>0.016960</td>\n",
+       "      <td>0.025971</td>\n",
+       "      <td>0.040389</td>\n",
+       "      <td>0.013970</td>\n",
+       "      <td>0.019801</td>\n",
+       "      <td>0.981612</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.051243</td>\n",
+       "      <td>0.209474</td>\n",
+       "      <td>0.227765</td>\n",
+       "      <td>0.194841</td>\n",
+       "      <td>0.212138</td>\n",
+       "      <td>0.105275</td>\n",
+       "      <td>0.108727</td>\n",
+       "      <td>0.171930</td>\n",
+       "      <td>0.108484</td>\n",
+       "      <td>0.112246</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.999245</td>\n",
+       "      <td>0.996611</td>\n",
+       "      <td>0.999444</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.025052</td>\n",
+       "      <td>0.033784</td>\n",
+       "      <td>0.055160</td>\n",
+       "      <td>0.020273</td>\n",
+       "      <td>0.025881</td>\n",
+       "      <td>0.981472</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.050429</td>\n",
+       "      <td>0.208405</td>\n",
+       "      <td>0.228451</td>\n",
+       "      <td>0.192153</td>\n",
+       "      <td>0.210973</td>\n",
+       "      <td>0.109703</td>\n",
+       "      <td>0.113016</td>\n",
+       "      <td>0.175902</td>\n",
+       "      <td>0.112982</td>\n",
+       "      <td>0.116626</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.025142</td>\n",
+       "      <td>0.100812</td>\n",
+       "      <td>0.016960</td>\n",
+       "      <td>0.025052</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.999656</td>\n",
+       "      <td>0.909638</td>\n",
+       "      <td>0.990531</td>\n",
+       "      <td>0.989554</td>\n",
+       "      <td>0.032106</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.004692</td>\n",
+       "      <td>0.010288</td>\n",
+       "      <td>0.017598</td>\n",
+       "      <td>0.003477</td>\n",
+       "      <td>0.009741</td>\n",
+       "      <td>0.020570</td>\n",
+       "      <td>0.020354</td>\n",
+       "      <td>0.021641</td>\n",
+       "      <td>0.021518</td>\n",
+       "      <td>0.021550</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12757</th>\n",
+       "      <td>0.110507</td>\n",
+       "      <td>0.113681</td>\n",
+       "      <td>0.105275</td>\n",
+       "      <td>0.109703</td>\n",
+       "      <td>0.020570</td>\n",
+       "      <td>0.021305</td>\n",
+       "      <td>0.082935</td>\n",
+       "      <td>0.013047</td>\n",
+       "      <td>0.013523</td>\n",
+       "      <td>0.115181</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.609788</td>\n",
+       "      <td>0.209980</td>\n",
+       "      <td>0.372614</td>\n",
+       "      <td>0.142131</td>\n",
+       "      <td>0.210008</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.999259</td>\n",
+       "      <td>0.865004</td>\n",
+       "      <td>0.985844</td>\n",
+       "      <td>0.985862</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12758</th>\n",
+       "      <td>0.113719</td>\n",
+       "      <td>0.116942</td>\n",
+       "      <td>0.108727</td>\n",
+       "      <td>0.113016</td>\n",
+       "      <td>0.020354</td>\n",
+       "      <td>0.021249</td>\n",
+       "      <td>0.082082</td>\n",
+       "      <td>0.013121</td>\n",
+       "      <td>0.013702</td>\n",
+       "      <td>0.119783</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.593605</td>\n",
+       "      <td>0.227216</td>\n",
+       "      <td>0.390566</td>\n",
+       "      <td>0.158711</td>\n",
+       "      <td>0.227101</td>\n",
+       "      <td>0.999259</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.880154</td>\n",
+       "      <td>0.984811</td>\n",
+       "      <td>0.986273</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12759</th>\n",
+       "      <td>0.176674</td>\n",
+       "      <td>0.180913</td>\n",
+       "      <td>0.171930</td>\n",
+       "      <td>0.175902</td>\n",
+       "      <td>0.021641</td>\n",
+       "      <td>0.023993</td>\n",
+       "      <td>0.096254</td>\n",
+       "      <td>0.016346</td>\n",
+       "      <td>0.017590</td>\n",
+       "      <td>0.185002</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.241193</td>\n",
+       "      <td>0.338477</td>\n",
+       "      <td>0.500085</td>\n",
+       "      <td>0.252464</td>\n",
+       "      <td>0.329192</td>\n",
+       "      <td>0.865004</td>\n",
+       "      <td>0.880154</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.846228</td>\n",
+       "      <td>0.861536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12760</th>\n",
+       "      <td>0.113460</td>\n",
+       "      <td>0.116959</td>\n",
+       "      <td>0.108484</td>\n",
+       "      <td>0.112982</td>\n",
+       "      <td>0.021518</td>\n",
+       "      <td>0.022676</td>\n",
+       "      <td>0.089601</td>\n",
+       "      <td>0.014371</td>\n",
+       "      <td>0.015063</td>\n",
+       "      <td>0.118392</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.602270</td>\n",
+       "      <td>0.203118</td>\n",
+       "      <td>0.374138</td>\n",
+       "      <td>0.142993</td>\n",
+       "      <td>0.214024</td>\n",
+       "      <td>0.985844</td>\n",
+       "      <td>0.984811</td>\n",
+       "      <td>0.846228</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.999280</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12761</th>\n",
+       "      <td>0.117021</td>\n",
+       "      <td>0.120576</td>\n",
+       "      <td>0.112246</td>\n",
+       "      <td>0.116626</td>\n",
+       "      <td>0.021550</td>\n",
+       "      <td>0.022872</td>\n",
+       "      <td>0.089276</td>\n",
+       "      <td>0.014639</td>\n",
+       "      <td>0.015439</td>\n",
+       "      <td>0.123314</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.586897</td>\n",
+       "      <td>0.220703</td>\n",
+       "      <td>0.392582</td>\n",
+       "      <td>0.159766</td>\n",
+       "      <td>0.231205</td>\n",
+       "      <td>0.985862</td>\n",
+       "      <td>0.986273</td>\n",
+       "      <td>0.861536</td>\n",
+       "      <td>0.999280</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>12762 rows × 12762 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          0         1         2         3         4         5         6      \\\n",
+       "0      1.000000  0.996691  0.999231  0.999245  0.025142  0.033669  0.053493   \n",
+       "1      0.996691  1.000000  0.995854  0.996611  0.100812  0.109665  0.124890   \n",
+       "2      0.999231  0.995854  1.000000  0.999444  0.016960  0.025971  0.040389   \n",
+       "3      0.999245  0.996611  0.999444  1.000000  0.025052  0.033784  0.055160   \n",
+       "4      0.025142  0.100812  0.016960  0.025052  1.000000  0.999656  0.909638   \n",
+       "...         ...       ...       ...       ...       ...       ...       ...   \n",
+       "12757  0.110507  0.113681  0.105275  0.109703  0.020570  0.021305  0.082935   \n",
+       "12758  0.113719  0.116942  0.108727  0.113016  0.020354  0.021249  0.082082   \n",
+       "12759  0.176674  0.180913  0.171930  0.175902  0.021641  0.023993  0.096254   \n",
+       "12760  0.113460  0.116959  0.108484  0.112982  0.021518  0.022676  0.089601   \n",
+       "12761  0.117021  0.120576  0.112246  0.116626  0.021550  0.022872  0.089276   \n",
+       "\n",
+       "          7         8         9      ...     12752     12753     12754  \\\n",
+       "0      0.019485  0.024981  0.982445  ... -0.051783  0.209434  0.228170   \n",
+       "1      0.096500  0.102124  0.979219  ... -0.051051  0.208526  0.229178   \n",
+       "2      0.013970  0.019801  0.981612  ... -0.051243  0.209474  0.227765   \n",
+       "3      0.020273  0.025881  0.981472  ... -0.050429  0.208405  0.228451   \n",
+       "4      0.990531  0.989554  0.032106  ...  0.004692  0.010288  0.017598   \n",
+       "...         ...       ...       ...  ...       ...       ...       ...   \n",
+       "12757  0.013047  0.013523  0.115181  ...  0.609788  0.209980  0.372614   \n",
+       "12758  0.013121  0.013702  0.119783  ...  0.593605  0.227216  0.390566   \n",
+       "12759  0.016346  0.017590  0.185002  ...  0.241193  0.338477  0.500085   \n",
+       "12760  0.014371  0.015063  0.118392  ...  0.602270  0.203118  0.374138   \n",
+       "12761  0.014639  0.015439  0.123314  ...  0.586897  0.220703  0.392582   \n",
+       "\n",
+       "          12755     12756     12757     12758     12759     12760     12761  \n",
+       "0      0.191421  0.210489  0.110507  0.113719  0.176674  0.113460  0.117021  \n",
+       "1      0.190382  0.210022  0.113681  0.116942  0.180913  0.116959  0.120576  \n",
+       "2      0.194841  0.212138  0.105275  0.108727  0.171930  0.108484  0.112246  \n",
+       "3      0.192153  0.210973  0.109703  0.113016  0.175902  0.112982  0.116626  \n",
+       "4      0.003477  0.009741  0.020570  0.020354  0.021641  0.021518  0.021550  \n",
+       "...         ...       ...       ...       ...       ...       ...       ...  \n",
+       "12757  0.142131  0.210008  1.000000  0.999259  0.865004  0.985844  0.985862  \n",
+       "12758  0.158711  0.227101  0.999259  1.000000  0.880154  0.984811  0.986273  \n",
+       "12759  0.252464  0.329192  0.865004  0.880154  1.000000  0.846228  0.861536  \n",
+       "12760  0.142993  0.214024  0.985844  0.984811  0.846228  1.000000  0.999280  \n",
+       "12761  0.159766  0.231205  0.985862  0.986273  0.861536  0.999280  1.000000  \n",
+       "\n",
+       "[12762 rows x 12762 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pandas.DataFrame(X).corr()"
    ]
   },
   {
