CRY-14  | Fetch new prices before training

--- a/src/collect/get_each_price.ipynb
+++ b/src/collect/get_each_price.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26,6 +26,7 @@
    "source": [
     "# get data\n",
     "from binance.spot import Spot \n",
+    "from constants import price_cols, PERIOD, SYMBOL, DURATION_EACH_DAY, DATA_POINT_ONE_DAY, NUM_OF_DAYS\n",
     "\n",
     "# train data\n",
     "import pandas as pd\n",
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,51 +67,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Declare period, symbol and header"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DAY_TO_QUERY = 1800\n",
-    "DURATION_EACH_DAY = 60 * 60 * 24 * 1000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "PERIOD = \"1d\"\n",
-    "cols =[\n",
-    "        'Kline open time',   #if a range of time\n",
-    "        'Open price',       #First trade price in the time range\n",
-    "        'High price',       #max buy in time\n",
-    "        'Low price',        #Min sell in time\n",
-    "        'Close price',      #Last trade price in the time range\n",
-    "        'Volume',           #Sum in time\n",
-    "        'Kline Close time',\n",
-    "        'Quote asset volume',   #Sum in time\n",
-    "        'Number of trades',     #Sum in time\n",
-    "        'Taker buy base asset volume',  #Sum in time\n",
-    "        'Taker buy quote asset volume', #Sum in time\n",
-    "        'Unused field, ignore'] # not use "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Get data points of symbols "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,83 +82,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2137\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['ETHBTC',\n",
-       " 'LTCBTC',\n",
-       " 'BNBBTC',\n",
-       " 'NEOBTC',\n",
-       " 'QTUMETH',\n",
-       " 'EOSETH',\n",
-       " 'SNTETH',\n",
-       " 'BNTETH',\n",
-       " 'BCCBTC',\n",
-       " 'GASBTC']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(len(symbols))\n",
-    "symbols[:10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2137 symbol X 1800 data points = 3846600 data points\n"
+      "172800 data points\n"
      ]
     }
    ],
    "source": [
-    "print(f\"{len(symbols)} symbol X {DAY_TO_QUERY} data points = {DAY_TO_QUERY*len(symbols)} data points\")"
+    "print(f\"{DATA_POINT_ONE_DAY * NUM_OF_DAYS} data points\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "today = datetime.utcnow().replace(hour=23, minute=0, second=0, microsecond=0)\n",
     "today_timestamp = int(today.timestamp() * 1000)\n",
     "\n",
-    "start_timestamp = today_timestamp - DAY_TO_QUERY * DURATION_EACH_DAY\n",
+    "start_timestamp = today_timestamp - NUM_OF_DAYS * DURATION_EACH_DAY\n",
     "end_timestamp = today_timestamp\n",
     "\n",
-    "for symbol in [\"BTCUSDT\"]:\n",
-    "    try:\n",
-    "        for timestamp in range(start_timestamp, end_timestamp, DURATION_EACH_DAY * 100):\n",
-    "            data = client.klines(symbol, PERIOD, limit=100, startTime=timestamp, endTime=timestamp + DURATION_EACH_DAY * 100)\n",
-    "            if start_timestamp == timestamp:\n",
-    "                df = pd.DataFrame(data, columns=cols)\n",
-    "            else:\n",
-    "                df = pd.concat([df, pd.DataFrame(data, columns=cols)], axis=0)\n",
+    "try:\n",
+    "    for timestamp in range(start_timestamp, end_timestamp, DURATION_EACH_DAY):\n",
+    "        data = client.klines(SYMBOL, PERIOD, limit=1000, startTime=timestamp, endTime=timestamp + DURATION_EACH_DAY)\n",
+    "        if start_timestamp == timestamp:\n",
+    "            df = pd.DataFrame(data, columns=price_cols)\n",
+    "        else:\n",
+    "            df = pd.concat([df, pd.DataFrame(data, columns=price_cols)], axis=0)\n",
     "\n",
-    "        df.drop(\"Unused field, ignore\", axis=1, inplace=True)\n",
-    "        df.to_csv(f\"../../datastore/price/{symbol}_{PERIOD}.csv\", index=False)\n",
-    "    except:\n",
-    "        print(f\"Error at {symbol}\")"
+    "    df.drop(\"Unused field, ignore\", axis=1, inplace=True)\n",
+    "    df.to_csv(f\"../../datastore/price/{SYMBOL}_{PERIOD}.csv\", index=False)\n",
+    "except:\n",
+    "    print(f\"Error at {SYMBOL}\")"
    ]
   }
  ],
