--- a/src/exploring/Q_Data_Exploration.ipynb
+++ b/src/exploring/Q_Data_Exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,23 +11,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Giải nghĩa các cột dữ liệu:\n",
-    "* symbol : mã kí hiệu loại giao dịch\n",
-    "* base : mã đồng cơ sở\n",
-    "* quote : mã đồng báo giá\n",
-    "* Kline open/close time : thời gian mở/đóng của việc thu dữ liệu\n",
-    "* open price : Giá tại thời điểm đầu khi thu dữ liệu\n",
-    "* close price : giá tại thời điểm cuối cùng khi thu dữ liệu\n",
-    "* high price : giá cao nhất trong thời gian thu dữ liệu\n",
-    "* low price : giá thấp nhất trong thời gian thu dữ liệu\n",
-    "* volume : số lượng base đã được trao đổi\n",
-    "* quote asset volume : số lượng quote đã được trao đổi\n",
-    "* taker buy base volume : số lượng mua base (lệnh) (?)\n",
-    "* taker buy quote volume : số lượng mua quote (lệnh) (?)"
+    "<h1 style=\"text-align:center\">⛏ Data explorations</h1> "
    ]
   },
   {
@@ -332,6 +319,26 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 💎 What is the meaning of each column?\n",
+    "* symbol : mã kí hiệu loại giao dịch\n",
+    "* base : mã đồng cơ sở\n",
+    "* quote : mã đồng báo giá\n",
+    "* Kline open/close time : thời gian mở/đóng của việc thu dữ liệu\n",
+    "* open price : Giá tại thời điểm đầu khi thu dữ liệu\n",
+    "* close price : giá tại thời điểm cuối cùng khi thu dữ liệu\n",
+    "* high price : giá cao nhất trong thời gian thu dữ liệu\n",
+    "* low price : giá thấp nhất trong thời gian thu dữ liệu\n",
+    "* volume : số lượng base đã được trao đổi\n",
+    "* quote asset volume : số lượng quote đã được trao đổi\n",
+    "* taker buy base volume : số lượng mua base (lệnh) (?)\n",
+    "* taker buy quote volume : số lượng mua quote (lệnh) (?)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {},
@@ -521,6 +528,19 @@
    "source": [
     "symbols = pandas.read_csv('../../datastore/coin_market_cap_symbols.csv')\n",
     "symbols"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 💎 What is the meaning of each column?\n",
+    "* symbol : mã kí hiệu loại giao dịch\n",
+    "* price: price of the symbol by USD\n",
+    "* percent_change_7d: percent change of the price in 7 days\n",
+    "* market_cap: market capitalization of the symbol by USD\n",
+    "* tags: tags of the symbol\n",
+    "* date_added: date added to the coinmarketcap"
    ]
   },
   {
